# microcrawler-webapp

./: .babelrc  .dockerignore  .editorconfig  .eslintrc  .flowconfig  .gitignore  .request.json  .travis.yml  Dockerfile  LICENSE  Makefile  PROTOCOLS.md  README.md  docker-compose.yml  gulpfile.babel.js  mix.exs  package.json  run-remote.sh  webpack.config.babel.js
.docker/: start.sh
.scripts/: install-node.sh
.travis/: docker-build.sh  install.sh
client/lib/: index.js
client/src/: index.js  index.jsx  routes.js
client/test/: microcrawler.spec.babel.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
data/ip/: delegated-afrinic-latest  delegated-apnic-latest  delegated-iana-latest  delegated-lacnic-latest
docks/postgresql/: pull.sh  run.sh
lib/: microcrawler_webapp.ex
lib/microcrawler_webapp/: accounts.ex  active_workers.ex  commander.ex  coordinator.ex  couchbase.ex  crawler_manager.ex  elasticsearch.ex  endpoint.ex  ip_info.ex  npm.ex  repo.ex  users.ex  work_queue.ex
native/: Cargo.toml
native/gauc/: Cargo.toml  README.md  build.rs
native/gauc/src/: lib.rs.in
priv/repo/: seeds.exs
test/: test_helper.exs
test/controllers/: page_controller_test.exs
test/microcrawler_webapp/: coordinator_test.exs
test/native/: gauc_test.exs
test/support/: channel_case.ex  conn_case.ex  model_case.ex
test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
web/: gettext.ex  guardian_serializer.ex  router.ex  web.ex
web/channels/: client_channel.ex  (+5 more)
webpack/: webpack-isomorphic-tools.js  webpack.config.babel.js
(+75 files in other folders)
